--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,22 @@
     }
   </style>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://runway2-0.vercel.app/">
+  <meta property="og:title" content="Financial Runway Calculator">
+  <meta property="og:description"
+    content="Calculate how long your current liquid assets will last based on expenses, return rate, and inflation.">
+  <meta property="og:image" content="https://runway2-0.vercel.app/og-image.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://runway2-0.vercel.app/">
+  <meta property="twitter:title" content="Financial Runway Calculator">
+  <meta property="twitter:description"
+    content="Calculate how long your current liquid assets will last based on expenses, return rate, and inflation.">
+  <meta property="twitter:image" content="https://runway2-0.vercel.app/og-image.png">
 </head>
 
 <body class="bg-gradient-to-r from-blue-100 to-purple-100 min-h-screen">
