--- a/public/index.html
+++ b/public/index.html
@@ -106,7 +106,7 @@
           </div>
           <div class="flex flex-col">
             <label for="monthly_income" class="text-sm font-semibold text-gray-700 dark:text-gray-300 mb-1">Monthly
-              Income</label>
+              Income (<i>Inflation-Adjusted</i>)</label>
             <div class="relative">
               <span class="currency-symbol"></span>
               <input type="text" inputmode="numeric" id="monthly_income" name="monthly_income"
