--- a/public/index.html
+++ b/public/index.html
@@ -142,8 +142,9 @@
             <thead class="sticky top-0 bg-gray-100 dark:bg-gray-700 shadow-sm">
               <tr>
                 <th class="border px-4 py-2 text-left">Year</th>
+                <th class="border px-4 py-2 text-left income-column hidden">Annual Income</th>
                 <th class="border px-4 py-2 text-left">Withdrawal</th>
-                <th class="border px-4 py-2 text-left">Networth</th>
+                <th class="border px-4 py-2 text-left">Networth <i>(at EOY)</i></th>
               </tr>
             </thead>
             <tbody id="projectionTableBody">
