--- a/public/index.html
+++ b/public/index.html
@@ -144,7 +144,7 @@
                 <th class="border px-4 py-2 text-left">Year</th>
                 <th class="border px-4 py-2 text-left income-column hidden">Annual Income</th>
                 <th class="border px-4 py-2 text-left">Withdrawal</th>
-                <th class="border px-4 py-2 text-left">Networth <i>(at EOY)</i></th>
+                <th class="border px-4 py-2 text-left">Networth</th>
               </tr>
             </thead>
             <tbody id="projectionTableBody">
